--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <div id="app"></div>
 <div class="parent-container">
   <button id="test-button">Click</button>
+  <button id="test-button2">Click</button>
 </div>
