--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <div id="app"></div>
 <div class="parent-container">
-  <button id="test-button">Click</button>
-  <button id="test-button2">Click</button>
+  <button class="test-button">Click</button>
+  <button class="test-button2">Click</button>
 </div>
-<div class='test-div'></div>
+<div class="test-div"></div>
