--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <div id="app"></div>
 <div class="parent-container">
-  <button class="test-button">Click</button>
-  <button class="test-button2">Click</button>
+  <input id="input-element" placeholder="count the values -----"></input>
+  <button id="counterButton">Counter</button>
 </div>
-<div class="test-div"></div>
