Search-bar-debounce

--- a/index.html
+++ b/index.html
@@ -3,3 +3,6 @@
   <input id="input-element" placeholder="count the values -----"></input>
   <button id="counterButton">Counter</button>
 </div>
+<div class="search-bar-debounce">
+  <input onkeyup="betterFunction()"/>
+</div>
